WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199720
CrashTracer: Regression : MobileSafari at UIKit: -[CALayerAccessibility__UIKit__QuartzCore setBounds:]
https://bugs.webkit.org/show_bug.cgi?id=199720
Summary
CrashTracer: Regression : MobileSafari at UIKit: -[CALayerAccessibility__UIKi...
Dean Jackson
Reported
2019-07-11 12:58:07 PDT
CrashTracer: Regression : MobileSafari at UIKit: -[CALayerAccessibility__UIKit__QuartzCore setBounds:]
Attachments
Patch
(2.22 KB, patch)
2019-07-11 13:00 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-07-11 12:58:35 PDT
<
rdar://problem/51470469
>
Dean Jackson
Comment 2
2019-07-11 13:00:49 PDT
Created
attachment 373940
[details]
Patch
Dean Jackson
Comment 3
2019-07-11 13:12:28 PDT
Committed
r247360
: <
https://trac.webkit.org/changeset/247360
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug